# Sorofy

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  fly.toml  idea1-project-brief.md
crates/api/: Cargo.toml
crates/api/src/: db.rs  lib.rs  main.rs  rpc.rs  server.rs
crates/api/tests/: rpc_live.rs
crates/verifier-core/: Cargo.toml
crates/verifier-core/src/: docker.rs  error.rs  lib.rs  reproduce.rs  source.rs
crates/verifier-core/tests/: reproduce_integration.rs
docker/api/: Dockerfile
docker/build-image/: Dockerfile  publish.sh
docs/: day0-reproduction-findings.md  day1-build-engine.md  day2-api.md  day3-deploy-demo.md  sep-58-notes.md
