[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sorofy-api"
path = "src/main.rs"

[dependencies]
verifier-core = { path = "../verifier-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# axum REST layer is added in Day2.
