[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sorofy-api"
path = "src/main.rs"

[dependencies]
verifier-core = { path = "../verifier-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
stellar-xdr = { version = "27.0.0", features = ["base64", "serde"] }
stellar-strkey = "0.0.18"
ureq = { workspace = true, features = ["json"] }
hex.workspace = true
axum = "0.8.9"
rusqlite = { version = "0.32", features = ["bundled"] }
# axum REST layer is added in Day2.
